--- a/server/client/src/routers/Todo/components/TaskItem/TaskItem.scss
+++ b/server/client/src/routers/Todo/components/TaskItem/TaskItem.scss
@@ -52,6 +52,7 @@
     align-items: center;
     justify-content: center;
     border-radius: inherit;
+    min-height: 61px;
 
     & > li {
       margin: 3px;
